Update and rename ejercico 16.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celia ej16</title>
+    <title>Celia</title>
  <style>
     *{box-sizing: border-box;}
         body{ display: grid; grid-template-columns: 33.3vw 33.3vw 33.3vw; grid-template-rows: 20vh 40vh 80vh 40vh; justify-content: center;}
