--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     *{box-sizing: border-box;}
         body{ display: grid; grid-template-columns: 33.3vw 33.3vw 33.3vw; grid-template-rows: 20vh 40vh 80vh 40vh; justify-content: center;}
         #cabecera{background-color: deeppink; grid-column: 1/3; margin: 10px; text-align: center; overflow: hidden;}
-        #menu{background-color: mistyrose;  margin: 10px;}
+        #menu{background-color: mistyrose;  margin: 10px; text-align: center; display: flex; align-items: center; justify-content: center;}}
         #enlaces{ background-color: hotpink; margin: 10px; overflow: hidden;}
         #enlaces:hover {transform: scale(60%);}
         #contenido{ background-color: lightpink; margin: 10px; overflow: hidden;}
